# dailynotes

./: .gitignore  .gitlab-ci.yml  .markdownlint.yaml  404.html  atom.xml  feed.json  index.html  package.json  pnpm-lock.yaml  robots.txt  rss.xml  sitemap.xml  slimsearch.worker.js
AI/: AI.html  index.html
CS/: TODOLIST.html  index.html  统括.html
DailyLife/: DailyLife.html  Proxy.html  index.html  出行.html  生活.html
Git/: Gitee.html  Github.html  Gitlab.html  index.html
Language/: index.html
NoteTools/: Markdown.html  Mermaid.html  Notion.html  PlantUML.html  VitePress.html  VuePress.html  Word.html  index.html
article/: index.html
assets/: 404.html-2WReHqc-.js  404.html-B-FC4mti.js  404.html-B9BV099z.js  (+23955 more)
docs/Language/Python/: Note-python.md  PEP8.md  Prefect.md  PythonWeb.md  QuickStart.md  pyproject.toml  开发环境.md  版本管理工具.md
docs/Language/Python/libs/Matplotlib/: Matplotlib.md
docs/Language/Python/libs/OpenCV/: OpenCV-python.md
docs/Language/Python/libs/Pandas/: Pandas.md
docs/Language/Python/libs/Pillow/: Pillow.md
docs/Language/Python/libs/PyPSRP/: PyPSRP.md
docs/Language/Python/libs/Rocketry/: index.md
docs/Language/Python/libs/TensorFlow/: TensorFlow.md
docs/Language/Python/libs/asyncio/: 异步编程.md
docs/Language/Python/libs/graphviz/: graphviz.md
docs/Language/Python/libs/json/: json.md
docs/Language/Python/libs/numpy/: numpy.md
docs/Language/Python/libs/python-igraph/: python-igraph.ipynb  python-igraph.md
docs/Language/Python/libs/tldextract/: tldextract.ipynb  tldextract.md
docs/Language/Python/libs/turtle/: turtle.md
(+1338 files in other folders)
